# mini-climate-data

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  registry.json
.github/workflows/: ci.yml
c3s-cica-atlas/era5/: psl_era5_mon_194001-202512_v025-small.nc
docs/: design.md
example/: hello-climate.txt
recipes/c3s-cica-atlas/: era5-psl.yml
recipes/example/: hello-climate.yml
reducers/: example_bytes.py
src/mini_climate_data/: __init__.py  _paths.py  catalogs.yml  cli.py  config.py  data_store.py  fetching.py  recipe.schema.json  recipes.py  reducers.py  registry.py  sources.py  validation.py
src/mini_climate_data/config/: __init__.py  defaults.toml
src/mini_climate_data/reducers/: __init__.py  base.py  helpers.py  nco.py  synthetic.py  xarray.py
tests/: test_data_store.py  test_fetching.py  test_ncks_reducer.py  test_packaging_rules.py  test_recipes.py  test_reducer_api.py  test_registry_validation.py  test_sources.py  test_xarray_reducer.py
