[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mini-climate-data"
version = "0.1.0"
description = "Reproducible recipes and tiny generated climate datasets for tests, examples, and CI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "mini-climate-data contributors" },
]
keywords = ["climate", "test-data", "netcdf", "reproducibility"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "click>=8.1",
  "GitPython>=3.1",
  "jsonschema>=4.22",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.8",
  "twine>=5.0",
]
fetch = [
  "pooch>=1.8",
]
netcdf = [
  "h5netcdf>=1.3",
  "xarray>=2024.3",
]
intake = [
  "aiohttp>=3.13",
  "intake>=2.0",
  "jinja2>=3.1",
]
all = [
  "aiohttp>=3.13",
  "h5netcdf>=1.3",
  "intake>=2.0",
  "jinja2>=3.1",
  "pooch>=1.8",
  "xarray>=2024.3",
]

[project.scripts]
mini-climate-data = "mini_climate_data.cli:main"
mcd = "mini_climate_data.cli:main"

[project.urls]
Homepage = "https://github.com/macpingu/mini-climate-data"
Repository = "https://github.com/macpingu/mini-climate-data"
Issues = "https://github.com/macpingu/mini-climate-data/issues"

[tool.hatch.build]
exclude = [
  "/data",
  "/artifacts",
  "/build-artifacts",
  "/dist",
  "*.nc",
  "*.zarr",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_climate_data"]

[tool.hatch.build.targets.wheel.force-include]
"recipes" = "mini_climate_data/_recipes"
"src/mini_climate_data/catalogs.yml" = "mini_climate_data/catalogs.yml"
"src/mini_climate_data/recipe.schema.json" = "mini_climate_data/recipe.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/recipes",
  "/reducers",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/data",
  "/artifacts",
  "/build-artifacts",
  "*.nc",
  "*.zarr",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "reducers"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
